helm/home-k8s/kustomize/argocd/base/argo-cd-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ui
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - argocd.andrewpjackson.com
    secretName: andrewpjackson.com-tls
  rules:
  - host: argocd.andrewpjackson.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: argocd-server
            port:
              name: http
